# sidewinder

./: .gitattributes  Cargo.toml  README.md
book1/: 10.3.ppm  11.1.ppm  11.2_1.ppm  11.2_2.ppm  8.3.ppm  8.6.ppm  9.5.ppm  9.6.ppm
book2/: 2.5.ppm  4.3.ppm  4.4.ppm  5.1.ppm  5.2.ppm
img/: 10.2.ppm  10.5.ppm  12.2.ppm  7.2.ppm  8.2.ppm  8.4.ppm  8.5.ppm
src/: camera.rs  hit.rs  lib.rs  main.rs  ray.rs  rng.rs  scene_1.rs  scene_2.rs  scene_3.rs  sphere.rs  vec3.rs
src/graphics/: aabb.rs  bvh.rs  hit.rs  material.rs  mod.rs  perlin.rs  ray.rs  texture.rs
src/math/: mod.rs  vec3.rs
src/object/: mod.rs  sphere.rs
src/ppm/: mod.rs
src/util/: camera.rs  mod.rs
