[package]
name = "sidewinder"
version = "0.1.0"
edition = "2021"
description = "CPU path tracer."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/sidewinder"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["graphics", "3d", "ray-tracing", "path-tracing", "rendering"]
categories = ["rendering"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
indicatif = "0.17.0-rc.11"
once_cell = { version = "1.12.0", features = ["parking_lot"] }
rand = "0.8.5"
rayon = "1.5.3"
strum = { version = "0.24.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
