[package]
name = "sidewinder"
version = "0.1.0"
edition = "2021"
description = "CPU path tracer."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/sidewinder"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["graphics", "3d", "ray-tracing", "path-tracing", "rendering"]
categories = ["rendering"]

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
image = { version = "0.25.5", features = ["png", "rayon"], default-features = false }
indicatif = "0.17.11"
rand = "0.9.0"
rayon = "1.10.0"
strum = { version = "0.27.1", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
